    Relase 0.2.4
    - Created classes PDF::DAO::Loader and PDF::DAO::Coercer. These
      replace the PDF::DAO::Delegator class.
    - [PDF::DAO::Type::Xref]
      streamlined index decoding and encoding

    Release 0.2.3
    - [PDF::DAO::Tie]
      -- Simplify method accessors. direct use of AT-KEY, ASSIGN-KEY,
         etc. 20% speed up of test suite run.
    - [PDF::DAO::Util]
      -- convert enums to ints in to-ast()
      -- rename sub to-ast-native() -> ast-coerce()
    - [PDF::Writer]
      -- use native functions from Lib::PDF::Writer, when available.

    Release 0.2.2
    - [PDF::Writer] handle ' (MoveShow) and " (MoveSetShow) operators
    - [PDF::IO::Handle] Open I/O as :bin 
    - Experimental use of Lib::PDF
      -- Speed up the slowest test xt/filter-predictors_bulk.t
      -- Fast packing alternative for PDF::IO::Util
      Optional, and for regression purposes, at this stage. Probably
      wont persue seriously until Rakudo has better JIT.

    Release 0.2.1
    - Renamed classes PDF::IO to PDF::IO::Util and PDF::IO::Input::*
      to PDF::IO::*.
    - Don't cache misses in PDF::DAO::Delegator
    - PDF::IO::Filter::Predictors now handles /BitsPerComponent < 8
    - Replace PDF::IO::Util resample() with pack(), unpack()

    Release 0.2.0
    - Renamed class PDF::DAO::Type::PDF to PDF. Restored module name
      to PDF

    Release 0.1.1
    - [PDF::Reader] now handles very large xref tables or streams (> 65K)
    - [PDF::DAO] use 'but' to apply roles to simple scalars, not 'does'.

    Release 0.1.0
    Renamed class namespace PDF::Storage -> PDF::IO. Used as the module
    name

    Release 0.0.9
    - class PDF::DAO::Stream is now based on PDF::DAO::Dict
    - withdrew non-standard PDF::DAO::Dict.new( $dict) positionals,
      in favour of PDF::DAO::Dict.new( :$dict ) named arguments.
      Same also for stream and array object constructors.
    - Use of siglless variables, where appropriate.